force-app/main/default/objects/IntakePeriod__c/IntakePeriod__c.object-meta.xml
<CustomObject>
    <description>Intake Period for the course available at a location.</description>
    <label>Intake Period</label>
    <nameField>
        <displayFormat>AID-IP-{0000}</displayFormat>
        <label>Intake Period ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Intake Period</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>