force-app/main/default/objects/IntakePeriod__c/fields/I_ST_ExternalId__c.field-meta.xml
<CustomField>
    <fullName>I_ST_ExternalId__c</fullName>
    <description>Concatenation of Course Availability Code and Course Instance Code</description>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>