force-app/main/default/objects/IntakePeriod__c/fields/L_AD_Active__c.field-meta.xml
<CustomField>
    <fullName>L_AD_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Active checkbox drives the usage of this information in AID.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>