force-app/main/default/objects/IntakePeriod__c/fields/L_AD_End_Date__c.field-meta.xml
<CustomField>
    <fullName>L_AD_End_Date__c</fullName>
    <description>End date for the intake period</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>