force-app/main/default/objects/IntakePeriod__c/fields/L_AD_Intake_Period_Code__c.field-meta.xml
<CustomField>
    <fullName>L_AD_Intake_Period_Code__c</fullName>
    <description>Intake Period Code</description>
    <label>Intake Period Code</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>SUM1</fullName>
            </value>
            <value>
                <fullName>R1</fullName>
            </value>
            <value>
                <fullName>R2</fullName>
            </value>
            <value>
                <fullName>OSP1</fullName>
            </value>
            <value>
                <fullName>OSP2</fullName>
            </value>
            <value>
                <fullName>OSP3</fullName>
            </value>
            <value>
                <fullName>OSP4</fullName>
            </value>
            <value>
                <fullName>OSP5</fullName>
            </value>
            <value>
                <fullName>OSP6</fullName>
            </value>
            <value>
                <fullName>OUAS1</fullName>
            </value>
            <value>
                <fullName>OUAS2</fullName>
            </value>
            <value>
                <fullName>OUAS3</fullName>
            </value>
            <value>
                <fullName>OUAS4</fullName>
            </value>
            <value>
                <fullName>SP1</fullName>
            </value>
            <value>
                <fullName>SP2</fullName>
            </value>
            <value>
                <fullName>SP3</fullName>
            </value>
            <value>
                <fullName>TS1</fullName>
            </value>
            <value>
                <fullName>TS2</fullName>
            </value>
            <value>
                <fullName>TS3</fullName>
            </value>
            <value>
                <fullName>TS4</fullName>
            </value>
            <value>
                <fullName>TS5</fullName>
            </value>
            <value>
                <fullName>TS6</fullName>
            </value>
            <value>
                <fullName>TS7</fullName>
            </value>
            <value>
                <fullName>TL1</fullName>
            </value>
            <value>
                <fullName>TL2</fullName>
            </value>
            <value>
                <fullName>TL3</fullName>
            </value>
            <value>
                <fullName>TL4</fullName>
            </value>
            <value>
                <fullName>TL5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>