force-app/main/default/objects/IntakePeriod__c/fields/L_AD_Intake_Period_Name__c.field-meta.xml
<CustomField>
    <fullName>L_AD_Intake_Period_Name__c</fullName>
    <description>Name for the intake period</description>
    <label>Intake Period</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Semester 1</fullName>
            </value>
            <value>
                <fullName>Semester 2</fullName>
            </value>
            <value>
                <fullName>Summer</fullName>
            </value>
            <value>
                <fullName>Research Study Period 1</fullName>
            </value>
            <value>
                <fullName>Research Study Period 2</fullName>
            </value>
            <value>
                <fullName>Online Study Period 1</fullName>
            </value>
            <value>
                <fullName>Online Study Period 2</fullName>
            </value>
            <value>
                <fullName>Online Study Period 3</fullName>
            </value>
            <value>
                <fullName>Online Study Period 4</fullName>
            </value>
            <value>
                <fullName>Online Study Period 5</fullName>
            </value>
            <value>
                <fullName>Online Study Period 6</fullName>
            </value>
            <value>
                <fullName>OUA Study Period 1</fullName>
            </value>
            <value>
                <fullName>OUA Study Period 2</fullName>
            </value>
            <value>
                <fullName>OUA Study Period 3</fullName>
            </value>
            <value>
                <fullName>OUA Study Period 4</fullName>
            </value>
            <value>
                <fullName>Study Period 1</fullName>
            </value>
            <value>
                <fullName>Study Period 2</fullName>
            </value>
            <value>
                <fullName>Study Period 3</fullName>
            </value>
            <value>
                <fullName>Teaching Session 1</fullName>
            </value>
            <value>
                <fullName>Teaching Session 2</fullName>
            </value>
            <value>
                <fullName>Teaching Session 3</fullName>
            </value>
            <value>
                <fullName>Teaching Session 4</fullName>
            </value>
            <value>
                <fullName>Teaching Session 5</fullName>
            </value>
            <value>
                <fullName>Teaching Session 6</fullName>
            </value>
            <value>
                <fullName>Teaching Session 7</fullName>
            </value>
            <value>
                <fullName>Term 1</fullName>
            </value>
            <value>
                <fullName>Term 2</fullName>
            </value>
            <value>
                <fullName>Term 3</fullName>
            </value>
            <value>
                <fullName>Term 4</fullName>
            </value>
            <value>
                <fullName>Term 5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>