force-app/main/default/objects/IntakePeriod__c/fields/L_AD_Intake_Period_Owner_Code__c.field-meta.xml
<CustomField>
    <fullName>L_AD_Intake_Period_Owner_Code__c</fullName>
    <label>Intake Period Owner Code</label>
    <length>64</length>
    <type>Text</type>
</CustomField>