force-app/main/default/objects/IntakePeriod__c/fields/L_AD_Intake_Period_Year__c.field-meta.xml
<CustomField>
    <fullName>L_AD_Intake_Period_Year__c</fullName>
    <description>Intake Year</description>
    <label>Intake Period Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>