force-app/main/default/objects/IntakePeriod__c/fields/L_AD_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>L_AD_Start_Date__c</fullName>
    <description>Start Date for the intake period</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>