force-app/main/default/objects/IntakePeriod__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>L_AD_Intake_Period_Name__c</columns>
    <columns>L_AD_Intake_Period_Year__c</columns>
    <columns>L_AD_Intake_Period_Code__c</columns>
    <columns>L_AD_Start_Date__c</columns>
    <columns>L_AD_End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>